# Balu_Code

./: .balucode.yaml  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/src/balu_code_cli/: __init__.py  __main__.py
cli/src/balu_code_cli/client/: http.py  ws.py
cli/src/balu_code_cli/commands/: auth.py  chat.py  config.py  index.py  init.py  models.py  session.py
cli/src/balu_code_cli/config/: balucode_yaml.py  loader.py  paths.py  permissions.py
cli/src/balu_code_cli/session/: __init__.py  reader.py  writer.py
cli/tests/: test_client_http.py  test_client_ws.py  test_cmd_auth.py  test_cmd_chat.py  test_cmd_config.py  test_cmd_index.py  test_cmd_init.py  test_cmd_models.py  test_cmd_session.py  test_config_balucode_yaml.py  test_config_loader.py  test_config_permissions.py  test_session_reader.py  test_session_writer.py  test_version.py
docs/: CHANGELOG.md  cli.md  config.md  install.md  marketplace-submission.md  phase-1-verification.md  phase-2-verification.md  phase-3a-verification.md  phase-3b-verification.md  phase-4a-verification.md  phase-opencode-verification.md  remote-client.md
docs/remote-client/: nginx.example.conf  opencode.json.tmpl
docs/superpowers/plans/: 2026-04-18-balu-code-phase-1-foundation.md  2026-04-18-balu-code-phase-2-services-and-routes.md  2026-04-18-balu-code-phase-3a-repo-map.md  2026-04-19-balu-code-phase-3b-rag.md  2026-04-19-balu-code-phase-4a-agent-loop.md  2026-04-19-balu-code-phase-4b-write-tools.md  2026-04-20-balu-power-implementation.md  2026-04-26-balu-code-phase-5a-cli.md  2026-04-26-balu-code-phase-5b-sessions-config.md  2026-04-26-balu-code-phase-6-ui-docs-release.md  2026-04-26-webapp-v2-system-stats.md  2026-04-27-js-ts-indexing.md  2026-05-14-opencode-runtime-integration.md  2026-05-15-opencode-server-password.md  (+2 more)
plugin/: __init__.py  config.py  data_dir.py  deps.py  plugin.json  pyproject.toml  requirements.txt  routes.py  schemas.py
plugin/prompts/: system.md  tool_use.md
plugin/services/: active_turn.py  agent_loop.py  audit.py  cancel.py  config_store.py  context_assembler.py  index_jobs.py  indexer.py  ollama_client.py  ollama_proxy.py  opencode_client.py  opencode_config.py  opencode_runtime.py  paths.py  project_store.py  rag_chunker.py  rag_index.py  rag_registry.py  repo_map.py  repo_map_python.py  repo_map_types.py  runtime_password.py  session_bridge.py  system.py  tokenizer.py
plugin/services/parsers/: __init__.py  js_ts.py  python.py
plugin/services/tools/: __init__.py  apply_patch.py  base.py  glob_tool.py  grep_tool.py  read_file.py  run_bash.py  web_fetch.py  write_file.py
plugin/tests/: conftest.py  test_active_turn.py  test_agent_loop.py  test_audit.py  test_audit_stats.py  test_cancel.py  test_config.py  test_config_store.py  test_context_assembler.py  test_data_dir.py  test_health_route.py  test_index_jobs.py  test_indexer.py  test_metadata.py  test_ollama_client_chat_stream.py  test_ollama_client_embed.py  test_ollama_client_list_models.py  test_ollama_client_ps.py  test_ollama_proxy.py  test_opencode_client.py  test_opencode_config.py  test_opencode_integration.py  test_opencode_runtime.py  test_parsers_dispatch.py  test_parsers_js_ts.py  test_parsers_python.py  test_paths.py  test_plugin_lifecycle.py  test_project_store.py  test_rag_chunker.py  test_rag_chunker_js_ts.py  test_rag_index.py  test_rag_registry.py  test_repo_map_python.py  test_repo_map_render.py  test_repo_map_walk.py  test_repo_map_walker.py  test_routes_chat.py  test_routes_chat_v2.py  test_routes_config_logs.py  (+19 more)
plugin/tests/fixtures/baluhost_stub/app/api/: deps.py
plugin/tests/fixtures/baluhost_stub/app/core/: database.py
plugin/tests/fixtures/baluhost_stub/app/plugins/: base.py
plugin/tests/fixtures/baluhost_stub/app/schemas/: user.py
plugin/tests/fixtures/baluhost_stub/app/services/: api_key_service.py  audit.py  auth.py  users.py
plugin/ui/: bundle.js
scripts/: bootstrap-remote-client.ps1  bootstrap-remote-client.sh  build_bhplugin.py  build_wheel.py  install-nginx-snippet-server.sh  release.py
scripts/tests/: test_build_bhplugin.py  test_build_wheel.py  test_release.py
shared/: pyproject.toml
shared/src/balu_code_shared/: __init__.py  events.py
shared/tests/: test_events.py
(+16 files in other folders)
