[project]
name = "balu-code"
version = "0.2.0"
description = "Self-hosted coding agent with opencode runtime"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["plugin/tests/fixtures/baluhost_stub"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Header", "fastapi.Cookie", "fastapi.Body", "fastapi.Form", "fastapi.File"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["shared/tests", "plugin/tests", "cli/tests", "scripts/tests"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers --import-mode=importlib"
asyncio_mode = "auto"
