[project]
name = "balu-code-plugin-dev"
version = "0.0.0"
description = "Dev-only metadata so pytest can import plugin/ and its tests."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "sqlite-vec>=0.1.9",
  "tiktoken>=0.6",
  "trafilatura>=1.12",
  "tree-sitter>=0.22",
  "tree-sitter-python>=0.21",
  "unidiff>=0.7",
  "fastapi>=0.110",
  "balu-code-shared",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff==0.6.9",
]

[tool.setuptools]
py-modules = []
