[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "balu-code-shared"
version = "0.1.0"
description = "Shared Pydantic event and config schemas for Balu Code plugin and CLI."
readme = "../README.md"
license = { file = "../LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Xveyn" }]
dependencies = [
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/balu_code_shared"]
